fix: Change main title and subtitle font size on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -159,18 +159,21 @@ li:hover {
     padding: 22% 0 5% 10%;
   }
   h1 {
+    font-size: 3.5rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  .header-container {
+    width: 80%;
+  }
+}
+@media only screen and (min-width: 50em) {
+  h1 {
     font-size: 5.5rem;
   }
   h2 {
     font-size: 2rem;
-  }
-  .header-container {
-    width: 60%;
-  }
-}
-@media only screen and (min-width: 46em) {
-  .header-container {
-    width: 80%;
   }
 }
 /* ---- Theme Rules ---- */
